Update title to AI Solutions Architect across all files

--- a/react-portfolio/public/index.html
+++ b/react-portfolio/public/index.html
@@ -7,14 +7,14 @@
     <meta name="theme-color" content="#3b82f6" />
     <meta
       name="description"
-      content="Carlos Barbosa - AI Business Analyst & Data Science Expert. Portfolio showcasing data science, machine learning, and business intelligence projects."
+      content="Carlos Barbosa - AI Solutions Architect & Data Science Expert. Portfolio showcasing data science, machine learning, and business intelligence projects."
     />
     <meta name="keywords" content="Carlos Barbosa, Data Science, AI, Machine Learning, Business Intelligence, Python, Power BI, Portfolio" />
     <meta name="author" content="Carlos Barbosa" />
     
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Carlos Barbosa - Data Science Portfolio" />
-    <meta property="og:description" content="AI Business Analyst specializing in data science, machine learning, and business intelligence solutions" />
+    <meta property="og:description" content="AI Solutions Architect specializing in data science, machine learning, and business intelligence solutions" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://your-domain.com" />
     <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
@@ -22,7 +22,7 @@
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Carlos Barbosa - Data Science Portfolio" />
-    <meta name="twitter:description" content="AI Business Analyst specializing in data science, machine learning, and business intelligence solutions" />
+    <meta name="twitter:description" content="AI Solutions Architect specializing in data science, machine learning, and business intelligence solutions" />
     <meta name="twitter:image" content="%PUBLIC_URL%/logo.png" />
     
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
